syntax = "proto3";

message TestTable {
	uint64 parallelism = 1;
	optional uint64 global_limit = 2;
}